# ansible_home

./: .envrc  .gitattributes  .gitignore  .gitmodules  .python-version  Makefile  Pipfile  README.md  ansible.cfg  go  hosts  inventory  inventory.yaml  nzbget.conf  pyproject.toml  requirements.txt  site.yaml  site.yml  venv.sh
files/biggs/: server-cert.pem  server-key.pem
files/cecil/: server-cert.pem  server-key.pem
files/wedge/: server-cert.pem  server-key.pem
filter_plugins/: joinx.py
group_vars/: all  infra  kubernetes  odroid  os_Archlinux  os_Debian  os_FreeBSD  os_Ubuntu  zfs
host_vars/: 192.168.239.5  biggs  biggs.radoncanyon.com  cecil  cecil.radoncanyon.com  wedge  wedge.radoncanyon.com
host_vars/biggs/: plain.yml  secret.yml
host_vars/cecil/: plain.yml  secret.yml
host_vars/wedge/: plain.yml  secret.yml
host_vars/wg-astoria.radoncanyon.com/: secret.yaml  vars.yaml
host_vars/wg-ev.radoncanyon.com/: secret.yaml  vars.yaml
host_vars/wg.lga1.radoncanyon.com/: vars.yaml
host_vars/wg.lga2.radoncanyon.com/: secret.yaml  vars.yaml
roles/certs/tasks/: main.yaml  main_Debian.yaml
roles/common/files/: etc_default_locale  login.conf
roles/common/handlers/: main.yml
roles/common/meta/: main.yml
roles/common/tasks/: locale.yml  main.yml
roles/common/templates/: sudoers.j2
roles/common/vars/: Archlinux.yaml  main.yml
roles/consul-template/files/: consul-template
roles/consul-template/handlers/: main.yml
roles/consul-template/tasks/: main.yml
roles/consul-template/templates/: consul-template.conf.j2
roles/consul/tasks/: main.yml
(+153 files in other folders)
