[tool.poetry]
name = "ansible_home"
version = "0.1.0"
description = ""
authors = ["Nick Lopez <nlopez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "2.9.27"
jinja2 = "^2.11.2"
PyYAML = "^5.3.1"
cryptography = "^3.3.2"
mitogen = "^0.2.9"
jmespath = "^0.10.0"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
