[tool.poetry]
name = "ansible_home"
version = "0.1.0"
description = ""
authors = ["Nick Lopez <nlopez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.1.0"
ansible-lint = "^6.3.0"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
